# FedASTW

./: lauch_fed.sh  pyproject.toml
fedlab/: __init__.py  setup.py
fedlab/contrib/dataset/: partitioned_cifar10.py
fedlab/fedlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
system/: aggregator.py  fedastw.py  model.py  sampling.py  settings.py  utils.py
